# bactelize

./: .gitignore  CMakeLists.txt  README.txt  bactelize.cxx  bactelize.h  bactelize.sh  lifconvert.sh  main.cxx  obsolete.cxx  omebactelize.sh
data/: multi-channel-z-series.ome.tif  multi-channel.ome.tif  single-channel.ome.tif  z-series.ome.tif
src/: CMakeLists.txt  bactelize.cxx
